# leetcode

./: .clang-format  .gitignore
p13_easy/: solution.h  solution_tests.cpp
p26_easy/: solution.h  solution_tests.cpp
p27_easy/: CMakeLists.txt  solution.h  solution_tests.cpp
p28_easy/: solution.h  solution_tests.cpp
p35_easy/: solution.h  solution_tests.cpp
p58_easy/: solution.h  solution_tests.cpp
p67_easy/: solution.h  solution_tests.cpp
